Wed Dec 30 19:26:52 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py: Fix bug in accessing results
	  directly by index.

Wed Dec 30 19:26:18 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Check accesses to search
	  results which didn't start with 0.

Wed Dec 30 15:37:32 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/testdata/chert_db/iamchert: Update chert format.

Wed Dec 30 15:03:45 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py,
	  xappy/unittests/cachemanager.py: Add a "clear()" method to
	  CacheManager to delete all the items in the cache.

Wed Dec 30 13:21:14 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: New xapian packages.  Includes performance
	  improvement for replace_document() when few changes have been
	  made to a document.

Wed Dec 30 12:20:46 GMT 2009  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update branchpoints.

Tue Dec 15 18:42:13 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Fix bug with facets for search
	  with cached hits - was always trying to use cached facets, too.

Tue Dec 15 18:40:42 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Add tests of getting facets
	  from cached searches.

Tue Dec 15 16:42:10 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py: Remove old parameter from
	  get_suggested_facets().

Tue Dec 15 16:09:04 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/mset_search_results.py,
	  xappy/searchconnection.py: Remove CacheResultStats and
	  MSetResultStats - replace them with a generic ResultStats which
	  takes both the mset and the cached value, and returns the cached
	  values if not None, and reads the mset otherwise.  Adjust the